--- a/backend/package.json
+++ b/backend/package.json
@@ -17,9 +17,16 @@
     "dotenv": "^4.0.0",
     "express": "^4.15.2",
     "clone": "^2.1.1",
-    "redux":"^3.7.2",
-    "react-redux":"^5.0.5",
-    "react-router":"^4.1.1",
-    "react-router-dom":"4.1.1"
+    "redux": "^3.7.2",
+    "react-redux": "^5.0.5",
+    "react-router": "^4.1.1",
+    "react-router-dom": "4.1.1"
+  },
+  "devDependencies": {
+    "eslint": "^4.7.2",
+    "eslint-config-airbnb": "^15.1.0",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-react": "^7.4.0"
   }
- }
+}
